@@ -106,6 +106,21 @@ allprojects {
             removeUnusedImports()
         }
     }
+
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        // Sonatype OSSRH snapshots
+        maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots" }
+    }
+}
+
+subprojects {
+    // All subproject dpenends on main project.
+    dependencies {
+        compileOnly(project.rootProject)
+        testImplementation(testFixtures(project.rootProject))
+    }
 }
 
 sourceSets {
@@ -138,10 +153,6 @@ sourceSets {
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
 configurations {
     all
     [testRuntime, testCompile]*.exclude group: 'org.languagetool', module: 'language-all'
@@ -153,6 +164,7 @@ ext {
     providedLibsDir = file('lib/provided')
     languageToolVersion = '6.1'
     luceneVersion = '5.5.5'
+    luceneGosenVersion = '5.5.1'
     jgitVersion = '6.6.0.202305301015-r'
     slf4jVersion = '2.0.7'
 }
@@ -212,9 +224,9 @@ dependencies {
         implementation 'com.google.guava:guava:31.0.1-jre'
         runtimeOnly("org.languagetool:language-all:${languageToolVersion}") {
             // Temporary exclusion; see https://sourceforge.net/p/omegat/bugs/814/
-            exclude module: 'lucene-gosen-ipadic'
+            exclude module: 'lucene-gosen'
         }
-        runtimeOnly 'org.omegat.lucene:lucene-gosen:5.0.0:ipadic'
+        runtimeOnly 'org.omegat.lucene:lucene-gosen:5.5.1:ipadic'
 
         // Lucene for tokenizers
         implementation "org.apache.lucene:lucene-core:${luceneVersion}"
@@ -304,6 +316,11 @@ dependencies {
     ['be', 'en', 'fr'].each {
         testImplementation "org.languagetool:language-${it}:${languageToolVersion}"
     }
+    testImplementation("org.languagetool:language-ja:${languageToolVersion}") {
+        // Temporary exclusion; see https://sourceforge.net/p/omegat/bugs/814/
+        exclude module: 'lucene-gosen'
+    }
+    testRuntimeOnly "org.omegat.lucene:lucene-gosen:${luceneGosenVersion}:ipadic"
     testRuntimeOnly "org.languagetool:language-pl:${languageToolVersion}"
     testRuntimeOnly "org.slf4j:slf4j-jdk14:${slf4jVersion}"
 
