@@ -6,26 +6,18 @@ plugins {
     id 'java-library'
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    compileOnly(project.rootProject)
-    // Libs are provided in the "source" distribution only
     if (providedLibsDir.directory) {
-        compileOnly fileTree(dir: providedLibsDir, include: '**/*.jar')
+        compileOnly fileTree(dir: providedLibsDir, includes: ['**/*commons-*.jar', '**/jackson*.jar'])
     } else {
         compileOnly 'commons-io:commons-io:2.11.0'
         compileOnly 'org.apache.commons:commons-text:1.9'
         // JSON parser
         compileOnly "com.fasterxml.jackson.core:jackson-core:2.13.4"
         compileOnly "com.fasterxml.jackson.core:jackson-databind:2.13.4.2"
+        testImplementation "com.fasterxml.jackson.core:jackson-core:2.13.4"
+        testImplementation "com.fasterxml.jackson.core:jackson-databind:2.13.4.2"
     }
-    // Test dependencies
-    testImplementation(testFixtures(project.rootProject))
-    testImplementation "com.fasterxml.jackson.core:jackson-core:2.13.4"
-    testImplementation "com.fasterxml.jackson.core:jackson-databind:2.13.4.2"
 }
 
 jar {
